# ClemsnoCrypto

./: .gitignore  CMakeLists.txt  README.md
dataset/: README.md  docker.sh
dataset/src/: libhydrogen_enc.c  libsodium_enc.c  libsodium_sign.c
include/: AliasAnalysisVisitor.h  AliasTaintCtx.h  ContextBase.h  GlobalVisitor.h  ModObject.h  ModifyVisitor.h  Utils.h  VisitorCallback.h  llvm_basics.h  marcos.h
runtime/: .gitignore  clang.patch  jemalloc520.patch  jemalloc_build.sh  runtime.c  test_jemalloc.c
src/: AliasAnalysisVisitor.cpp  AliasTaintCtx.cpp  ModifyVisitor.cpp  TaintAnalysisVisitor.cpp  Utils.cpp  passentry.cpp
